# foot_image

./: .dockerignore  .gitignore  CMakeLists.txt  CardDetector.cpp  CardDetector.h  Dockerfile  README.md  SideFootDirection.cpp  SideFootDirection.hpp  UpperFootDirection.cpp  UpperFootDirection.hpp  common.cpp  common.hpp  contour.cpp  contour.hpp  main.cpp  skin.cpp  skin.hpp
not_used/: skin-detect.h
server/: app.js  package.json
server/routes/: index.js
